kube-manifest/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-web-app-nodeport-service
  labels: 
    app: data-web-app
    tier: data-web     
spec:
  type: NodePort 
  selector:
    app: data-web-app
  ports: 
    - name: http
      port: 80
      targetPort: 8501
